refactor: as rotas referente a wallet, foram ajsutadas para corresponder aos verbos http "get", "post", "put", "delete"
