# swagger.json
@@ -152,26 +152,46 @@
                                         "properties": {
                                             "first_name": {
                                                 "type": "string",
-                                                "examplo": "Marcia"
+                                                "example": "Marcia"
                                             },
                                             "last_name": {
                                                 "type": "string",
-                                                "examplo": "Silva"
+                                                "example": "Silva"
                                             },
                                             "email": {
                                                 "type": "string",
-                                                "examplo": "marcia@teste.com.br"
+                                                "example": "marcia@teste.com.br"
                                             },
                                             "photo": {
                                                 "type": "string",
-                                                "examplo": "/storage/4564564.png"
+                                                "example": "/storage/4564564.png"
                                             },
                                             "token": {
                                                 "type": "string",
-                                                "exemplo": "jwt-asdasdmlmd;oqweodncc897y987d987as98d7abcascduacb"
+                                                "example": "jwt-asdasdmlmd;oqweodncc897y987d987as98d7abcascduacb"
                                             }
                                         }
                                     }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/wallets": {
+            "get": {
+                "summary": "Retorna todas as carteiras",
+                "description": "Essa rota retorna todas as carteiras registradas",
+                "tags": ["Wallet"],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {}
                                 }
                             }
                         }
@@ -195,11 +215,24 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "name": {}
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "name": {
+                                            "type": "string",
+                                            "example": "minha Carteira"
+                                        },
+                                        "description": {
+                                            "type": "string",
+                                            "example": "carteira principal"
+                                        },
+                                        "option_wallet": {
+                                            "type": "integer",
+                                            "example": "1 or 0 -significa ativo or inativo como preferencia do sistema"
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -207,11 +240,34 @@
                 }
             }
         },
-        "/wallets": {
-            "get": {
-                "summary": "Retorna todas as carteiras",
-                "description": "Essa rota retorna todas as carteiras registradas",
-                "tags": ["Wallet"]
+        "/wallet": {
+            "post": {
+                "summary": "Cria uma nova carteira",
+                "tags": ["Wallet"],
+                "description": "Rota para criar uma nova carteira",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "minha Carteira"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "carteira principal"
+                                    },
+                                    "option_wallet": {
+                                        "type": "integer",
+                                        "example": "1 or 0 -significa ativo or inativo como preferencia do sistema"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     }
